# teris

./: CMakeLists.txt  Makefile  constants.h  controls.c  controls.h  figures.c  figures.h  game_over.txt  game_state.c  game_state.h  main.c  render.c  render.h  start_menu.txt
src/: constants.h  controls.c  controls.h  figures.c  figures.h  game_over.txt  game_state.c  game_state.h  main.c  render.c  render.h  start_menu.txt
